update image profile

--- a/CV.css
+++ b/CV.css
@@ -34,7 +34,7 @@
     height: 220px;
     border-radius: 50%;
     border: 4px solid rgb(2, 2, 6);
-    background-image: url("APAP\ CV.png");
+    background-image: url("APAPCV.png");
     background-position:center top;
     background-size: 100%;
     }
